--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Tfidfvectorizer(df, ngram: str):\n",
+    "def Tfidfvectorizer_split_data(df, ngram: str):\n",
     "    X = df[\"speech\"]\n",
     "    y = df[\"party\"]\n",
     "    if ngram == \"tri-gram\":\n",
@@ -80,9 +80,17 @@
     "    else :\n",
     "        vectorizer = TfidfVectorizer(stop_words = \"english\", max_features = 3000)\n",
     "    X_vector = vectorizer.fit_transform(X)\n",
-    "    return X_vector\n",
-    "    "
+    "    X_train, X_test, y_train, y_test = train_test_split(X_vector, y, test_size=0.2, stratify=y, random_state=26)\n",
+    "    return X_train, X_test, y_train, y_test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0231e389",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
