importing required classes or function from sklearn

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -108,6 +108,18 @@
     "print(\"Y Train set shape:\", Y_train.shape)\n",
     "print(\"Y Test set shape:\", Y_test.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3d0db6a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import f1_score, classification_report "
+   ]
   }
  ],
  "metadata": {
