Implemented the code for random forst and SVM

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -120,6 +120,54 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import f1_score, classification_report "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f93e8ff9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Random_Forest_and_SVM(X_train, X_test, y_train, y_test):\n",
+    "    #models\n",
+    "    random_forest = RandomForestClassifier(n_estimators=300, random_state=26)\n",
+    "    svm = SVC(kernel='linear', random_state=26)\n",
+    "\n",
+    "    #Training models\n",
+    "    print(\"Training Random Forest model\")\n",
+    "    random_forest.fit(X_train, y_train)\n",
+    "    print(\"Training SVM model\")\n",
+    "    svm.fit(X_train, y_train)\n",
+    "\n",
+    "    #predictions\n",
+    "    random_forest_pred = random_forest.predict(X_test)\n",
+    "    svm_pred = svm.predict(X_test)\n",
+    "\n",
+    "    #macro-average f1 score\n",
+    "    random_forest_f1 = f1_score(y_test, random_forest_pred, average='macro')\n",
+    "    svm_f1 = f1_score(y_test, svm_pred, average='macro')\n",
+    "\n",
+    "    #classification report \n",
+    "    random_forest_report = classification_report(y_test, random_forest_pred)\n",
+    "    svm_report = classification_report(y_test, svm_pred)\n",
+    "\n",
+    "    print(\"Random Forest Model\")\n",
+    "    print(f\"Macro-average f1 score: {random_forest_f1}\")\n",
+    "    print(\"Classification Report:\")\n",
+    "    print(random_forest_report)\n",
+    "    print(\"\\n\")\n",
+    "    print(\"SVM Model\")\n",
+    "    print(f\"Macro-average f1 score: {svm_f1}\")\n",
+    "    print(\"Classification Report:\")\n",
+    "    print(svm_report)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    " "
+   ]
   }
  ],
  "metadata": {
