Adding more code to Random Forest and SVM

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -129,6 +129,7 @@
    "outputs": [],
    "source": [
     "def Random_Forest_and_SVM(X_train, X_test, y_train, y_test):\n",
+    "    results = {}\n",
     "    #models\n",
     "    random_forest = RandomForestClassifier(n_estimators=300, random_state=26)\n",
     "    svm = SVC(kernel='linear', random_state=26)\n",
@@ -145,7 +146,9 @@
     "\n",
     "    #macro-average f1 score\n",
     "    random_forest_f1 = f1_score(y_test, random_forest_pred, average='macro')\n",
+    "    results[\"Random Forest\"] = random_forest_f1\n",
     "    svm_f1 = f1_score(y_test, svm_pred, average='macro')\n",
+    "    results[\"SVM\"] = svm_f1\n",
     "\n",
     "    #classification report \n",
     "    random_forest_report = classification_report(y_test, random_forest_pred)\n",
@@ -155,18 +158,14 @@
     "    print(f\"Macro-average f1 score: {random_forest_f1}\")\n",
     "    print(\"Classification Report:\")\n",
     "    print(random_forest_report)\n",
+    "\n",
     "    print(\"\\n\")\n",
     "    print(\"SVM Model\")\n",
     "    print(f\"Macro-average f1 score: {svm_f1}\")\n",
     "    print(\"Classification Report:\")\n",
     "    print(svm_report)\n",
-    "    \n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    " "
+    "    return results"
    ]
   }
  ],
