--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "id": "b579b9cd",
    "metadata": {},
    "outputs": [],
@@ -26,8 +26,9 @@
     "    #print(df.shape)\n",
     "\n",
     "    # remove any rows where the value of the ‘party’ column is not one of the four most common party names, and remove the ‘Speaker’ value\n",
+    "    df = df[df[\"party\"] != \"Speaker\"]\n",
     "    top4_parties = df[\"party\"].value_counts().index[:4]\n",
-    "    df = df[df[\"party\"].isin(top4_parties) & (df[\"party\"] != \"Speaker\")]\n",
+    "    df = df[df[\"party\"].isin(top4_parties)]\n",
     "    #print(df.shape)\n",
     "\n",
     "    # remove any rows where the value in the ‘speech_class’ column is not ‘Speech’\n",
@@ -44,240 +45,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "id": "acbe1f6e",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>speech</th>\n",
-       "      <th>party</th>\n",
-       "      <th>constituency</th>\n",
-       "      <th>date</th>\n",
-       "      <th>speech_class</th>\n",
-       "      <th>major_heading</th>\n",
-       "      <th>year</th>\n",
-       "      <th>speakername</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>It has been less than two weeks since the Gove...</td>\n",
-       "      <td>Conservative</td>\n",
-       "      <td>Suffolk Coastal</td>\n",
-       "      <td>2020-09-14</td>\n",
-       "      <td>Speech</td>\n",
-       "      <td>Work and Pensions</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Therese Coffey</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>I am delighted to announce that last Friday we...</td>\n",
-       "      <td>Conservative</td>\n",
-       "      <td>South West Norfolk</td>\n",
-       "      <td>2020-09-14</td>\n",
-       "      <td>Speech</td>\n",
-       "      <td>Japan Free Trade Agreement</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Elizabeth Truss</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>I thank the Secretary of State for advance sig...</td>\n",
-       "      <td>Labour</td>\n",
-       "      <td>Islington South and Finsbury</td>\n",
-       "      <td>2020-09-14</td>\n",
-       "      <td>Speech</td>\n",
-       "      <td>Japan Free Trade Agreement</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Emily Thornberry</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>After the right hon. Lady’s congratulations to...</td>\n",
-       "      <td>Conservative</td>\n",
-       "      <td>South West Norfolk</td>\n",
-       "      <td>2020-09-14</td>\n",
-       "      <td>Speech</td>\n",
-       "      <td>Japan Free Trade Agreement</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Elizabeth Truss</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>I congratulate the Secretary of State. I recog...</td>\n",
-       "      <td>Scottish National Party</td>\n",
-       "      <td>Dundee East</td>\n",
-       "      <td>2020-09-14</td>\n",
-       "      <td>Speech</td>\n",
-       "      <td>Japan Free Trade Agreement</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Stewart Hosie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39831</th>\n",
-       "      <td>I rise to present a petition on behalf of the ...</td>\n",
-       "      <td>Conservative</td>\n",
-       "      <td>Rother Valley</td>\n",
-       "      <td>2021-04-28</td>\n",
-       "      <td>Speech</td>\n",
-       "      <td>Petition - Levelling Up Fund</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>Alexander Stafford</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39834</th>\n",
-       "      <td>Thank you, Mr Deputy Speaker, and I am very gr...</td>\n",
-       "      <td>Conservative</td>\n",
-       "      <td>South West Bedfordshire</td>\n",
-       "      <td>2021-04-28</td>\n",
-       "      <td>Speech</td>\n",
-       "      <td>National Minimum Wage Enforcement</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>Andrew Selous</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39835</th>\n",
-       "      <td>I congratulate my hon. Friend the Member for S...</td>\n",
-       "      <td>Conservative</td>\n",
-       "      <td>Sutton and Cheam</td>\n",
-       "      <td>2021-04-28</td>\n",
-       "      <td>Speech</td>\n",
-       "      <td>National Minimum Wage Enforcement</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>Paul Scully</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39837</th>\n",
-       "      <td>The hon. Gentleman makes an important, twofold...</td>\n",
-       "      <td>Conservative</td>\n",
-       "      <td>Sutton and Cheam</td>\n",
-       "      <td>2021-04-28</td>\n",
-       "      <td>Speech</td>\n",
-       "      <td>National Minimum Wage Enforcement</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>Paul Scully</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39869</th>\n",
-       "      <td>Recent research by the Campaign to Protect Rur...</td>\n",
-       "      <td>Labour</td>\n",
-       "      <td>Ilford South</td>\n",
-       "      <td>2021-04-29</td>\n",
-       "      <td>Speech</td>\n",
-       "      <td>Transport</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>Sam Tarry</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7815 rows × 8 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                  speech  \\\n",
-       "63     It has been less than two weeks since the Gove...   \n",
-       "99     I am delighted to announce that last Friday we...   \n",
-       "100    I thank the Secretary of State for advance sig...   \n",
-       "101    After the right hon. Lady’s congratulations to...   \n",
-       "104    I congratulate the Secretary of State. I recog...   \n",
-       "...                                                  ...   \n",
-       "39831  I rise to present a petition on behalf of the ...   \n",
-       "39834  Thank you, Mr Deputy Speaker, and I am very gr...   \n",
-       "39835  I congratulate my hon. Friend the Member for S...   \n",
-       "39837  The hon. Gentleman makes an important, twofold...   \n",
-       "39869  Recent research by the Campaign to Protect Rur...   \n",
-       "\n",
-       "                         party                  constituency        date  \\\n",
-       "63                Conservative               Suffolk Coastal  2020-09-14   \n",
-       "99                Conservative            South West Norfolk  2020-09-14   \n",
-       "100                     Labour  Islington South and Finsbury  2020-09-14   \n",
-       "101               Conservative            South West Norfolk  2020-09-14   \n",
-       "104    Scottish National Party                   Dundee East  2020-09-14   \n",
-       "...                        ...                           ...         ...   \n",
-       "39831             Conservative                 Rother Valley  2021-04-28   \n",
-       "39834             Conservative       South West Bedfordshire  2021-04-28   \n",
-       "39835             Conservative              Sutton and Cheam  2021-04-28   \n",
-       "39837             Conservative              Sutton and Cheam  2021-04-28   \n",
-       "39869                   Labour                  Ilford South  2021-04-29   \n",
-       "\n",
-       "      speech_class                      major_heading  year  \\\n",
-       "63          Speech                  Work and Pensions  2020   \n",
-       "99          Speech         Japan Free Trade Agreement  2020   \n",
-       "100         Speech         Japan Free Trade Agreement  2020   \n",
-       "101         Speech         Japan Free Trade Agreement  2020   \n",
-       "104         Speech         Japan Free Trade Agreement  2020   \n",
-       "...            ...                                ...   ...   \n",
-       "39831       Speech       Petition - Levelling Up Fund  2021   \n",
-       "39834       Speech  National Minimum Wage Enforcement  2021   \n",
-       "39835       Speech  National Minimum Wage Enforcement  2021   \n",
-       "39837       Speech  National Minimum Wage Enforcement  2021   \n",
-       "39869       Speech                          Transport  2021   \n",
-       "\n",
-       "              speakername  \n",
-       "63         Therese Coffey  \n",
-       "99        Elizabeth Truss  \n",
-       "100      Emily Thornberry  \n",
-       "101       Elizabeth Truss  \n",
-       "104         Stewart Hosie  \n",
-       "...                   ...  \n",
-       "39831  Alexander Stafford  \n",
-       "39834       Andrew Selous  \n",
-       "39835         Paul Scully  \n",
-       "39837         Paul Scully  \n",
-       "39869           Sam Tarry  \n",
-       "\n",
-       "[7815 rows x 8 columns]"
+       "party\n",
+       "Conservative               4819\n",
+       "Labour                     2317\n",
+       "Scottish National Party     679\n",
+       "Liberal Democrat            269\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = read_and_clean_file(\"p2-texts/hansard40000.csv\")\n",
-    "df"
+    "df[\"party\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "5d0bac56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8084, 8)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#2a\n",
     "df.shape"
@@ -296,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "id": "2de4c239",
    "metadata": {},
    "outputs": [],
@@ -315,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "id": "0231e389",
    "metadata": {},
    "outputs": [
@@ -323,10 +132,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X Train set shape: (6252, 3000)\n",
-      "X Test set shape: (1563, 3000)\n",
-      "Y Train set shape: (6252,)\n",
-      "Y Test set shape: (1563,)\n"
+      "X Train set shape: (6467, 3000)\n",
+      "X Test set shape: (1617, 3000)\n",
+      "Y Train set shape: (6467,)\n",
+      "Y Test set shape: (1617,)\n"
      ]
     }
    ],
@@ -341,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "id": "3d0db6a5",
    "metadata": {},
    "outputs": [],
@@ -353,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "id": "f93e8ff9",
    "metadata": {},
    "outputs": [],
@@ -400,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "id": "afd26466",
    "metadata": {},
    "outputs": [
@@ -411,48 +220,121 @@
       "Training Random Forest model\n",
       "Training SVM model\n",
       "Random Forest Model\n",
-      "Macro-average f1 score: 0.6269718149483269\n",
+      "Macro-average f1 score: 0.45469001950616234\n",
       "Classification Report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.74      0.98      0.84       964\n",
-      "                 Labour       0.79      0.43      0.56       463\n",
-      "Scottish National Party       0.96      0.32      0.48       136\n",
+      "           Conservative       0.72      0.98      0.83       964\n",
+      "                 Labour       0.75      0.44      0.56       463\n",
+      "       Liberal Democrat       0.00      0.00      0.00        54\n",
+      "Scottish National Party       0.87      0.29      0.43       136\n",
       "\n",
-      "               accuracy                           0.76      1563\n",
-      "              macro avg       0.83      0.58      0.63      1563\n",
-      "           weighted avg       0.78      0.76      0.73      1563\n",
+      "               accuracy                           0.73      1617\n",
+      "              macro avg       0.59      0.43      0.45      1617\n",
+      "           weighted avg       0.72      0.73      0.69      1617\n",
       "\n",
       "\n",
       "\n",
       "SVM Model\n",
-      "Macro-average f1 score: 0.7871964473639963\n",
+      "Macro-average f1 score: 0.5933446121140653\n",
       "Classification Report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.85      0.92      0.89       964\n",
-      "                 Labour       0.79      0.71      0.75       463\n",
-      "Scottish National Party       0.83      0.65      0.73       136\n",
+      "           Conservative       0.83      0.92      0.87       964\n",
+      "                 Labour       0.74      0.71      0.72       463\n",
+      "       Liberal Democrat       1.00      0.07      0.14        54\n",
+      "Scottish National Party       0.78      0.54      0.64       136\n",
       "\n",
-      "               accuracy                           0.83      1563\n",
-      "              macro avg       0.83      0.76      0.79      1563\n",
-      "           weighted avg       0.83      0.83      0.83      1563\n",
+      "               accuracy                           0.80      1617\n",
+      "              macro avg       0.84      0.56      0.59      1617\n",
+      "           weighted avg       0.81      0.80      0.79      1617\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ramya\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\ramya\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\ramya\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Random Forest': 0.6269718149483269, 'SVM': 0.7871964473639963}"
+       "{'Random Forest': 0.45469001950616234, 'SVM': 0.5933446121140653}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#2c\n",
+    "Random_Forest_and_SVM(X_train, X_test, Y_train, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a32639ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Random Forest model\n",
+      "Training SVM model\n",
+      "Random Forest Model\n",
+      "Macro-average f1 score: 0.6748975043716996\n",
+      "Classification Report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.76      0.97      0.85       964\n",
+      "                 Labour       0.80      0.49      0.61       463\n",
+      "Scottish National Party       0.95      0.40      0.57       136\n",
+      "\n",
+      "               accuracy                           0.78      1563\n",
+      "              macro avg       0.84      0.62      0.67      1563\n",
+      "           weighted avg       0.79      0.78      0.75      1563\n",
+      "\n",
+      "\n",
+      "\n",
+      "SVM Model\n",
+      "Macro-average f1 score: 0.7955796360349998\n",
+      "Classification Report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.86      0.92      0.89       964\n",
+      "                 Labour       0.79      0.73      0.76       463\n",
+      "Scottish National Party       0.84      0.65      0.74       136\n",
+      "\n",
+      "               accuracy                           0.84      1563\n",
+      "              macro avg       0.83      0.77      0.80      1563\n",
+      "           weighted avg       0.84      0.84      0.84      1563\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Random Forest': 0.6748975043716996, 'SVM': 0.7955796360349998}"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#2d\n",
+    "X_train, X_test, Y_train, Y_test = Tfidfvectorizer_split_data(df, \"tri-gram\")\n",
     "Random_Forest_and_SVM(X_train, X_test, Y_train, Y_test)"
    ]
   }
