--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2de4c239",
    "metadata": {},
    "outputs": [],
@@ -102,8 +102,10 @@
     "def Tfidfvectorizer_split_data(df, ngram: str):\n",
     "    X = df[\"speech\"]\n",
     "    y = df[\"party\"]\n",
+    "    # Below condition will consider unigrams, bi-grams and tri-grams features - d part\n",
     "    if ngram == \"tri-gram\":\n",
     "        vectorizer = TfidfVectorizer(stop_words = \"english\", max_features = 3000, ngram_range=(1,3))\n",
+    "    # This condition will be slected for b part\n",
     "    else :\n",
     "        vectorizer = TfidfVectorizer(stop_words = \"english\", max_features = 3000)\n",
     "    X_vector = vectorizer.fit_transform(X)\n",
