adding few print statements to identify which part of function is running.

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b579b9cd",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,8 @@
     "\n",
     "    #remove any rows where the text in the ‘speech’ column is less than 1000 characters long.\n",
     "    df = df[df[\"speech\"].str.len() >= 1000]\n",
-    "    #print(df.shape)\n",
+    "    \n",
+    "    print(df.shape)\n",
     "\n",
     "    return df\n",
     "\n"
@@ -45,29 +46,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "acbe1f6e",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>speech</th>\n",
+       "      <th>party</th>\n",
+       "      <th>constituency</th>\n",
+       "      <th>date</th>\n",
+       "      <th>speech_class</th>\n",
+       "      <th>major_heading</th>\n",
+       "      <th>year</th>\n",
+       "      <th>speakername</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>It has been less than two weeks since the Gove...</td>\n",
+       "      <td>Conservative</td>\n",
+       "      <td>Suffolk Coastal</td>\n",
+       "      <td>2020-09-14</td>\n",
+       "      <td>Speech</td>\n",
+       "      <td>Work and Pensions</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>Therese Coffey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>I am delighted to announce that last Friday we...</td>\n",
+       "      <td>Conservative</td>\n",
+       "      <td>South West Norfolk</td>\n",
+       "      <td>2020-09-14</td>\n",
+       "      <td>Speech</td>\n",
+       "      <td>Japan Free Trade Agreement</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>Elizabeth Truss</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>I thank the Secretary of State for advance sig...</td>\n",
+       "      <td>Labour</td>\n",
+       "      <td>Islington South and Finsbury</td>\n",
+       "      <td>2020-09-14</td>\n",
+       "      <td>Speech</td>\n",
+       "      <td>Japan Free Trade Agreement</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>Emily Thornberry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>After the right hon. Lady’s congratulations to...</td>\n",
+       "      <td>Conservative</td>\n",
+       "      <td>South West Norfolk</td>\n",
+       "      <td>2020-09-14</td>\n",
+       "      <td>Speech</td>\n",
+       "      <td>Japan Free Trade Agreement</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>Elizabeth Truss</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>I congratulate the Secretary of State. I recog...</td>\n",
+       "      <td>Scottish National Party</td>\n",
+       "      <td>Dundee East</td>\n",
+       "      <td>2020-09-14</td>\n",
+       "      <td>Speech</td>\n",
+       "      <td>Japan Free Trade Agreement</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>Stewart Hosie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39831</th>\n",
+       "      <td>I rise to present a petition on behalf of the ...</td>\n",
+       "      <td>Conservative</td>\n",
+       "      <td>Rother Valley</td>\n",
+       "      <td>2021-04-28</td>\n",
+       "      <td>Speech</td>\n",
+       "      <td>Petition - Levelling Up Fund</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Alexander Stafford</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39834</th>\n",
+       "      <td>Thank you, Mr Deputy Speaker, and I am very gr...</td>\n",
+       "      <td>Conservative</td>\n",
+       "      <td>South West Bedfordshire</td>\n",
+       "      <td>2021-04-28</td>\n",
+       "      <td>Speech</td>\n",
+       "      <td>National Minimum Wage Enforcement</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Andrew Selous</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39835</th>\n",
+       "      <td>I congratulate my hon. Friend the Member for S...</td>\n",
+       "      <td>Conservative</td>\n",
+       "      <td>Sutton and Cheam</td>\n",
+       "      <td>2021-04-28</td>\n",
+       "      <td>Speech</td>\n",
+       "      <td>National Minimum Wage Enforcement</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Paul Scully</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39837</th>\n",
+       "      <td>The hon. Gentleman makes an important, twofold...</td>\n",
+       "      <td>Conservative</td>\n",
+       "      <td>Sutton and Cheam</td>\n",
+       "      <td>2021-04-28</td>\n",
+       "      <td>Speech</td>\n",
+       "      <td>National Minimum Wage Enforcement</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Paul Scully</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39869</th>\n",
+       "      <td>Recent research by the Campaign to Protect Rur...</td>\n",
+       "      <td>Labour</td>\n",
+       "      <td>Ilford South</td>\n",
+       "      <td>2021-04-29</td>\n",
+       "      <td>Speech</td>\n",
+       "      <td>Transport</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Sam Tarry</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8084 rows × 8 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "party\n",
-       "Conservative               4819\n",
-       "Labour                     2317\n",
-       "Scottish National Party     679\n",
-       "Liberal Democrat            269\n",
-       "Name: count, dtype: int64"
+       "                                                  speech  \\\n",
+       "63     It has been less than two weeks since the Gove...   \n",
+       "99     I am delighted to announce that last Friday we...   \n",
+       "100    I thank the Secretary of State for advance sig...   \n",
+       "101    After the right hon. Lady’s congratulations to...   \n",
+       "104    I congratulate the Secretary of State. I recog...   \n",
+       "...                                                  ...   \n",
+       "39831  I rise to present a petition on behalf of the ...   \n",
+       "39834  Thank you, Mr Deputy Speaker, and I am very gr...   \n",
+       "39835  I congratulate my hon. Friend the Member for S...   \n",
+       "39837  The hon. Gentleman makes an important, twofold...   \n",
+       "39869  Recent research by the Campaign to Protect Rur...   \n",
+       "\n",
+       "                         party                  constituency        date  \\\n",
+       "63                Conservative               Suffolk Coastal  2020-09-14   \n",
+       "99                Conservative            South West Norfolk  2020-09-14   \n",
+       "100                     Labour  Islington South and Finsbury  2020-09-14   \n",
+       "101               Conservative            South West Norfolk  2020-09-14   \n",
+       "104    Scottish National Party                   Dundee East  2020-09-14   \n",
+       "...                        ...                           ...         ...   \n",
+       "39831             Conservative                 Rother Valley  2021-04-28   \n",
+       "39834             Conservative       South West Bedfordshire  2021-04-28   \n",
+       "39835             Conservative              Sutton and Cheam  2021-04-28   \n",
+       "39837             Conservative              Sutton and Cheam  2021-04-28   \n",
+       "39869                   Labour                  Ilford South  2021-04-29   \n",
+       "\n",
+       "      speech_class                      major_heading  year  \\\n",
+       "63          Speech                  Work and Pensions  2020   \n",
+       "99          Speech         Japan Free Trade Agreement  2020   \n",
+       "100         Speech         Japan Free Trade Agreement  2020   \n",
+       "101         Speech         Japan Free Trade Agreement  2020   \n",
+       "104         Speech         Japan Free Trade Agreement  2020   \n",
+       "...            ...                                ...   ...   \n",
+       "39831       Speech       Petition - Levelling Up Fund  2021   \n",
+       "39834       Speech  National Minimum Wage Enforcement  2021   \n",
+       "39835       Speech  National Minimum Wage Enforcement  2021   \n",
+       "39837       Speech  National Minimum Wage Enforcement  2021   \n",
+       "39869       Speech                          Transport  2021   \n",
+       "\n",
+       "              speakername  \n",
+       "63         Therese Coffey  \n",
+       "99        Elizabeth Truss  \n",
+       "100      Emily Thornberry  \n",
+       "101       Elizabeth Truss  \n",
+       "104         Stewart Hosie  \n",
+       "...                   ...  \n",
+       "39831  Alexander Stafford  \n",
+       "39834       Andrew Selous  \n",
+       "39835         Paul Scully  \n",
+       "39837         Paul Scully  \n",
+       "39869           Sam Tarry  \n",
+       "\n",
+       "[8084 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = read_and_clean_file(\"p2-texts/hansard40000.csv\")\n",
-    "df[\"party\"].value_counts()"
+    "df\n",
+    "#df[\"party\"].value_counts()"
    ]
   },
   {
@@ -102,13 +307,19 @@
     "def Tfidfvectorizer_split_data(df, ngram: str):\n",
     "    X = df[\"speech\"]\n",
     "    y = df[\"party\"]\n",
+    "    \n",
     "    # Below condition will consider unigrams, bi-grams and tri-grams features - d part\n",
-    "    if ngram == \"tri-gram\":\n",
+    "    # Adjust the parameters of the Tfidfvectorizer so that unigrams, bi-grams and tri-grams will be considered as features\n",
+    "    if ngram == \"3-gram\":\n",
     "        vectorizer = TfidfVectorizer(stop_words = \"english\", max_features = 3000, ngram_range=(1,3))\n",
+    "\n",
     "    # This condition will be slected for b part\n",
+    "    # Use the default parameters, except for omitting English stopwords and setting max_features to 3000.\n",
     "    else :\n",
     "        vectorizer = TfidfVectorizer(stop_words = \"english\", max_features = 3000)\n",
     "    X_vector = vectorizer.fit_transform(X)\n",
+    "\n",
+    "    # Split the data into a train and test set, using stratified sampling, with a random seed of 26.\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X_vector, y, test_size=0.2, stratify=y, random_state=26)\n",
     "    return X_train, X_test, y_train, y_test"
    ]
@@ -153,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f93e8ff9",
    "metadata": {},
    "outputs": [],
@@ -167,8 +378,10 @@
     "    #Training models\n",
     "    print(\"Training Random Forest model\")\n",
     "    random_forest.fit(X_train, y_train)\n",
+    "    print(\"\\n\")\n",
     "    print(\"Training SVM model\")\n",
     "    svm.fit(X_train, y_train)\n",
+    "    print(\"\\n\")\n",
     "\n",
     "    #predictions\n",
     "    random_forest_pred = random_forest.predict(X_test)\n",
@@ -184,13 +397,13 @@
     "    random_forest_report = classification_report(y_test, random_forest_pred)\n",
     "    svm_report = classification_report(y_test, svm_pred)\n",
     "\n",
-    "    print(\"Random Forest Model\")\n",
+    "    print(\"Random Forest Model:\")\n",
     "    print(f\"Macro-average f1 score: {random_forest_f1}\")\n",
     "    print(\"Classification Report:\")\n",
     "    print(random_forest_report)\n",
     "\n",
     "    print(\"\\n\")\n",
-    "    print(\"SVM Model\")\n",
+    "    print(\"SVM Model:\")\n",
     "    print(f\"Macro-average f1 score: {svm_f1}\")\n",
     "    print(\"Classification Report:\")\n",
     "    print(svm_report)\n",
@@ -272,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a32639ca",
    "metadata": {},
    "outputs": [
@@ -339,7 +552,7 @@
    ],
    "source": [
     "#2d\n",
-    "X_train, X_test, Y_train, Y_test = Tfidfvectorizer_split_data(df, \"tri-gram\")\n",
+    "X_train, X_test, Y_train, Y_test = Tfidfvectorizer_split_data(df, \"3-gram\")\n",
     "Random_Forest_and_SVM(X_train, X_test, Y_train, Y_test)"
    ]
   },
@@ -348,6 +561,7 @@
    "id": "e38a4a60",
    "metadata": {},
    "source": [
+    "#part e\n",
     "Implement a new custom tokenizer and pass it to the tokenizer argument of Tfidfvectorizer. You can use this function in any way you like to try to achieve\n",
     "the best classification performance while keeping the number of features to nomore than 3000, and using the same three classifiers as above. Print the classification report for the best performing classifier using your tokenizer."
    ]
@@ -367,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "7c08d4ec",
    "metadata": {},
    "outputs": [],
@@ -385,19 +599,27 @@
     "                      tokens.append(token.lemma_.lower())\n",
     "    return tokens\n",
     "\n",
-    "def Tfidfvectorizer_customtokeniser_split_data(df):\n",
+    "def Tfidfvectorizer_customtokeniser_split_data(df, ngram:str):\n",
     "    X = df[\"speech\"]\n",
     "    y = df[\"party\"]\n",
-    "    vectorizer = TfidfVectorizer(max_features = 3000, ngram_range=(1,3),tokenizer=custom_tokenizer,min_df=20,max_df=0.7)\n",
+    "    print(\"Running TfidfVectorizer\")\n",
+    "    if ngram == \"3-gram\":\n",
+    "        print(\"Selected uni-gram, bi-gram and tri-gram \\n\")\n",
+    "        vectorizer = TfidfVectorizer(max_features = 3000, ngram_range=(1,3),tokenizer=custom_tokenizer,min_df=20,max_df=0.7)\n",
+    "    else:\n",
+    "        print(\"Selected default n-gram \\n\")\n",
+    "        vectorizer = TfidfVectorizer(max_features=3000, tokenizer=custom_tokenizer, min_df=20, max_df=0.7 )\n",
     "    X_vector = vectorizer.fit_transform(X)\n",
+    "    print(\"Vectorization completed \\n\")\n",
+    "\n",
+    "    print(\"Splitting the data into training and testing \\n\")\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X_vector, y, test_size=0.2, stratify=y, random_state=26)\n",
-    "    return X_train, X_test, y_train, y_test\n",
-    "\n"
+    "    return X_train, X_test, y_train, y_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "fa5113fb",
    "metadata": {},
    "outputs": [
@@ -471,8 +693,12 @@
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = Tfidfvectorizer_customtokeniser_split_data(df)\n",
-    "Random_Forest_and_SVM(X_train, X_test, y_train, y_test)"
+    "X_train, X_test, y_train, y_test = Tfidfvectorizer_customtokeniser_split_data(df, \"default\")\n",
+    "Random_Forest_and_SVM(X_train, X_test, y_train, y_test)\n",
+    "print(\"\\n\")\n",
+    "print(\"For uni-gram, bi-gram and tri-gram\")\n",
+    "X1_train, X1_test, y1_train, y1_test = Tfidfvectorizer_customtokeniser_split_data(df, \"3-gram\")\n",
+    "Random_Forest_and_SVM(X1_train, X1_test, y1_train, y1_test)\n"
    ]
   }
  ],
